Issue #20489: Explicitly qualified expressions for default values in methods.